<resources>
    <string name="app_name">PC Component Guru</string>

    <string name="loading">
        Loading
    </string>

    <string name="build_your_">
        Build your PC
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="starter_bui">
        Starter build
    </string>

    <string name="optimal_bui">
Optimal build
</string>

    <string name="advanced_bu">
Advanced build
</string>

    <string name="maximum_bui">
Maximum build
</string>

    <string name="exit">
Exit
</string>

    <string name="this_catego">
This category covers assemblies with the ability to play in Full HD resolution using predominantly high-quality graphics. The presented system unit will also cope well with old games from 3-5 years ago.
</string>

    <string name="cpu">
CPU
</string>

    <string name="intel_core_">
Intel Core i3-10105F
</string>

    <string name="intel_core_5_13">
Intel Core i5-13600KF
</string>

    <string name="intel_core_7">
Intel Core i7-13700K
</string>

    <string name="cooler">
Cooler
</string>

    <string name="id_cooling_">
ID-Cooling SE-802-SD
</string>

    <string name="id_cooling_224">
ID-Cooling SE-224-XTS
</string>

    <string name="next">
Next
</string>

    <string name="motherboard">
Motherboard
</string>

    <string name="atx_msi_mpg">
ATX MSI MPG B650 CARBON WIFI
</string>

    <string name="atx_msi_mag">
ATX MSI MAG Z790 TOMAHAWK WIFI
</string>

    <string name="matx_asus_h_h510">
mATX ASUS PRIME H510M-A
</string>

    <string name="matx_asus_p_450">
        mATX ASUS PRIME B450M-K II
    </string>

    <string name="matx_asus_p_550">
mATX ASUS PRIME B550M-K
</string>

    <string name="ram">
RAM
</string>

    <string name="ddr4_16gb_2">
DDR4 16GB (2*8GB) Kingston FURY
</string>

    <string name="video_card">
Video card
</string>

    <string name="pci_e_palit">
PCI-E Palit GeForce RTX 3050 Dual
</string>

    <string name="storage">
Storage
</string>

    <string name="ssd_m_2_228">
SSD M.2 2280 ADATA
</string>

    <string name="ssd_m_2_228_sams">
SSD M.2 2280 Samsung
</string>

    <string name="ase">
Сase
</string>

    <string name="atx_exegate">
ATX Exegate AA-440-AA350
</string>

    <string name="power_unit">
Power Unit
</string>

    <string name="atx_deepcoo">
ATX Deepcool PF500
</string>

    <string name="atx_deepcoo_pk650d">
ATX Deepcool PK650D
</string>

    <string name="basic_build">
Basic build
</string>

    <string name="builds_suit">
Builds suitable for modern AAA games in Full HD resolution with predominantly maximum graphics quality enabled, but without the use of ray tracing. In some cases you will have to use DLSS or FSR.
</string>

    <string name="amd_ryzen_5">
AMD Ryzen 5 3600
</string>

    <string name="matx_gigaby">
mATX GIGABYTE H610M K
</string>

    <string name="matx_gigaby_760">
mATX GIGABYTE B760M DS3H DDR4
</string>

    <string name="matx_asus_p2">
mATX ASUS PRIME B450M-K II
</string>

    <string name="palit_gefor">
Palit GeForce RTX 3060 DUAL OC
</string>

    <string name="palit_gefor_40">
Palit GeForce RTX 4090 GameRock
</string>

    <string name="deepcool_ag">
Deepcool AG300
</string>

    <string name="atx_cougar_">
ATX Cougar VTE X2 600 Rev.2
</string>

    <string name="atx_1stplay">
ATX 1STPLAYER RAINBOW R3
</string>

    <string name="the_assembl">
The assemblies are suitable for modern AAA games using predominantly maximum graphics quality in Full HD and WQHD resolution, as well as using ray tracing and upscaling methods.
</string>

    <string name="amd_ryzen_5_5">
AMD Ryzen 5 5600
</string>

    <string name="intel_core_3_10">
Intel Core i3-10105F
</string>

    <string name="intel_core_3_12">
Intel Core i3-12105F
</string>

    <string name="intel_core_5_12">
Intel Core i5-12400F
</string>

    <string name="atx_asus_pr">
ATX ASUS PRIME B650-PLUS
</string>

    <string name="ddr4_32gb_2">
DDR4 32GB (2*16GB) Kingston FURY
</string>

    <string name="sapphire_ra">
Sapphire Radeon RX 6700 XT PULSE
</string>

    <string name="atx_zalman_">
ATX Zalman S3 TG
</string>

    <string name="the_builds_">
The builds are suitable for modern AAA games using predominantly maximum graphics quality in WQ HD resolution, as well as using ray tracing and upscaling methods.
</string>

    <string name="amd_ryzen_9">
AMD Ryzen 9 7900X
</string>

    <string name="amd_ryzen_7">
AMD Ryzen 7 7700X
</string>

    <string name="atx_asus_tu">
ATX ASUS TUF GAMING Z690-PLUS D4
</string>

    <string name="liquid_cool">
Liquid cooling system
</string>

    <string name="id_cooling_liquid">
ID-Cooling FROSTFLOW 240 XT
</string>

    <string name="ddr5_32gb_2">
DDR5 32GB (2*16GB) Team Group
</string>

    <string name="ddr5_32gb_2_adata">
DDR5 32GB (2*16GB) ADATA
</string>

    <string name="gigabyte_ge">
GIGABYTE GeForce RTX 4070 GAMI NG OC
</string>

    <string name="adata_agamm">
ADATA AGAMMIXS70B-1T-CS
</string>

    <string name="eatx_deepco">
eATX Deepcool MATREXX 55 MESH ADD-RGB
</string>

    <string name="atx_be_quie">
ATX Be quiet! System Power 10
</string>

    <string name="li_galahad_">
Li Galahad Edition 360 UNI FAN SL
</string>

    <string name="eatx_phante">
eATX PHANTEKS Enthoo Evolv X Glass
</string>

    <string name="atx_seasoni">
ATX SeaSonic SSR-1000FX
</string>

</resources>