<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MenuFragmentComPCComponentGuruApp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com_pc_component_guru_app_loading_image" />

    <TextView
        android:id="@+id/build_your_"
        android:layout_width="139dp"
        android:layout_height="216dp"
        android:layout_marginStart="81dp"
        android:layout_marginTop="98dp"
        android:gravity="top"
        android:lineSpacingExtra="16sp"
        android:text="@string/build_your_"
        android:textAppearance="@style/build_your_"
        android:translationY="-8sp"
        />


    <View
        android:id="@+id/rectangle_1"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="340dp"
        android:background="@drawable/rectangle_1"
        />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="423dp"
        android:background="@drawable/rectangle_1"
        />

    <TextView
        android:id="@+id/starter_bui"
        android:layout_width="224.84dp"
        android:layout_height="51.69dp"
        android:layout_marginStart="101dp"
        android:layout_marginTop="352dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/starter_bui"
        android:textAppearance="@style/starter_bui"
        android:translationY="-4.01sp" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="506dp"
        android:background="@drawable/rectangle_1"
        />

    <View
        android:id="@+id/rectangle_4"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="588dp"
        android:background="@drawable/rectangle_1"
        />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="670dp"
        android:background="@drawable/rectangle_1"
        />

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="245dp"
        android:layout_height="56dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="753dp"
        android:background="@drawable/rectangle_1"
        />

    <TextView
        android:id="@+id/basic_build"
        android:layout_width="224.84dp"
        android:layout_height="51.69dp"
        android:layout_marginStart="101.3dp"
        android:layout_marginTop="434.7dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/basic_build"
        android:textAppearance="@style/basic_build"
        android:translationY="-4.01sp" />

    <TextView
        android:id="@+id/optimal_bui"
        android:layout_width="224.84dp"
        android:layout_height="51.69dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="516dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/optimal_bui"
        android:textAppearance="@style/optimal_bui"
        android:translationY="-4.01sp" />

    <TextView
        android:id="@+id/advanced_bu"
        android:layout_width="219dp"
        android:layout_height="52dp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="598dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/advanced_bu"
        android:textAppearance="@style/advanced_bu"
        android:translationY="-4.01sp" />

    <TextView
        android:id="@+id/maximum_bui"
        android:layout_width="235.7dp"
        android:layout_height="51.69dp"
        android:layout_marginStart="96.65dp"
        android:layout_marginTop="680.92dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/maximum_bui"
        android:textAppearance="@style/maximum_bui"
        android:translationY="-4.01sp" />

    <TextView
        android:id="@+id/exit"
        android:layout_width="235dp"
        android:layout_height="45dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="763dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/exit"
        android:textAppearance="@style/exit"
        android:translationY="-4.01sp" />


</FrameLayout>