<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".basicBuild.BasicBuildProcComPcComponentGuruApp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/com_pc_component_guru_app_loading_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/backComPcComponentGuruApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/image_back_com_pc_component_guru_app_loading_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintStart_toEndOf="@+id/backComPcComponentGuruApp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/starter_bui"
        android:layout_width="185.38dp"
        android:layout_height="44.31dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="8sp"
        android:text="@string/basic_build"
        android:textAppearance="@style/basic_build"
        android:translationY="-4.01sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menuComPcComponentGuruApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/com_pc_component_guru_app_image_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/builds_suit"
        android:layout_width="387dp"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="7sp"
        android:text="@string/builds_suit"
        android:textAppearance="@style/builds_suit"
        android:translationY="-3.33sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectangle_1" />

    <TextView
        android:id="@+id/cpu"
        android:layout_width="52dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="10sp"
        android:text="@string/cpu"
        android:textAppearance="@style/cpu"
        android:translationY="-4.99sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/builds_suit" />

    <TextView
        android:id="@+id/amd_ryzen_5"
        android:layout_width="231dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-10dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="10sp"
        android:text="@string/amd_ryzen_5"
        android:textAppearance="@style/amd_ryzen_5"
        android:translationY="-4.99sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpu" />

    <TextView
        android:id="@+id/intel_core_"
        android:layout_width="254dp"
        android:layout_height="44dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="10sp"
        android:text="@string/intel_core_"
        android:textAppearance="@style/intel_core_"
        android:translationY="-4.99sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13" />

    <View
        android:id="@+id/rectangle_2"
        android:layout_width="202dp"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rectangle_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <TextView
        android:id="@+id/nextComPcComponentGuruApp"
        android:layout_width="185.38dp"
        android:layout_height="44.31dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="11sp"
        android:text="@string/next"
        android:textAppearance="@style/next"
        android:textColor="#FFFFFF"
        android:textSize="38sp"
        android:translationY="-5.35sp"
        app:layout_constraintEnd_toEndOf="@+id/rectangle_2"
        app:layout_constraintStart_toStartOf="@+id/rectangle_2"
        app:layout_constraintTop_toTopOf="@+id/rectangle_2" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="156dp"
        android:layout_height="129dp"
        android:src="@drawable/bb_proc_ryzen_com_pc_component_guru_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amd_ryzen_5" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="125dp"
        android:layout_height="112dp"
        android:layout_marginTop="-5dp"
        android:src="@drawable/bb_proc_intel_com_pc_component_guru_app"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intel_core_" />

</androidx.constraintlayout.widget.ConstraintLayout>